--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Independent Russian Baptist Church Of San Diego",
-    "short_name": "Independent Russian Church",
+    "name": "Independent Slavic Baptist Church Of San Diego",
+    "short_name": "Independent Slavic Church",
     "start_url": "index.html",
     "display": "standalone",
     "background_color": "#fdfdfd",
